--- a/.github/workflows/selenium_harley.yml
+++ b/.github/workflows/selenium_harley.yml
@@ -2,7 +2,7 @@ name: Automação Harley Selenium
 
 on:
   schedule:
-    - cron: '0 6 * * *'  # Executa diariamente às 6h UTC
+    - cron: '*/5 * * * *'  # Executa a cada 5 minutos
   workflow_dispatch:  # Permite execução manual
 
 jobs:
@@ -30,4 +30,4 @@ jobs:
           sudo mv chromedriver /usr/local/bin/
 
       - name: Executar o script
-        run: python nome_do_script.py
+        run: python sodre_copart_chrome.py
