Remove smtplib da instalação

--- a/.github/workflows/selenium_harley.yml
+++ b/.github/workflows/selenium_harley.yml
@@ -18,9 +18,14 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Criar e Ativar Ambiente Virtual
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+
       - name: Instalar dependências
         run: |
-          pip install selenium tabulate smtplib email
+          pip install -r requirements.txt
 
       - name: Instalar Chrome e ChromeDriver
         run: |
@@ -30,4 +35,6 @@ jobs:
           sudo mv chromedriver /usr/local/bin/
 
       - name: Executar o script
-        run: python sodre_copart_chrome.py
+        run: |
+          source venv/bin/activate  # Garantir que o ambiente virtual esteja ativado
+          python sodre_copart_chrome.py
