Atualizar workflow para instalar dependências via requirements.txt

--- a/.github/workflows/selenium_harley.yml
+++ b/.github/workflows/selenium_harley.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Instalar dependências
         run: |
-          pip install selenium tabulate
+          pip install -r requirements.txt  # Instala todas as dependências listadas no requirements.txt
 
       - name: Instalar Chrome e ChromeDriver
         run: |
