--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-      - name: Instalar dependências
-        run: |
-          pip install selenium tabulate
+selenium==4.27.1
+tabulate==0.9.0
+chromedriver-autoinstaller==0.6.4
