--- a/.github/workflows/selenium_harley.yml
+++ b/.github/workflows/selenium_harley.yml
@@ -2,7 +2,7 @@ name: Automação Harley Selenium
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Executa a cada 5 minutos
+    - cron: '30 9 * * *'  # Executa todo dia às 09:30h
   workflow_dispatch:  # Permite execução manual
 
 jobs:
